--- a/main.css
+++ b/main.css
@@ -18,14 +18,14 @@ nav {
 	padding:10px;
 	position:relative;
 	display:block;
-	width:75%;
 	text-align:center;
 	margin: auto;
 }
 
 nav a{
 	display: inline-flex;
-	width:20%;
+    width:auto;
+    padding: 1em 1em;
 	font-weight:bold;
 	color: grey;
 	text-decoration:none;
