--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@
     clear: both;
 }
 
+.center {
+    text-align: center;
+}
+
 .header div {
     float: left;
 }
@@ -19,7 +23,7 @@ nav {
 	position:relative;
 	display:block;
 	text-align:center;
-	margin: auto;
+    margin: 0;
 }
 
 nav a{
@@ -29,10 +33,23 @@ nav a{
 	font-weight:bold;
 	color: grey;
 	text-decoration:none;
-	transition:0.4s;
 }
 
 nav a:hover{
-	color: black;
-	transition:0.4s;
+	color: orangered;
 }
+ 
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a:hover {
+      color: orangered;
+    }
+  
+  .dropdown:hover .dropdown-content {
+      display: block;
+    }
