--- a/main.css
+++ b/main.css
@@ -93,4 +93,37 @@ img {
 }
 img {
     border: 0;
-}0
+}
+
+.header img {
+    width: 150px;
+    display: inline-flex;
+}
+
+.form-control {
+    display: inline-flex;
+}
+
+.form-control:focus {
+    box-shadow: none;
+  }
+  
+  .form-control-underlined {
+    border-width: 0;
+    border-bottom-width: 1px;
+    border-radius: 0;
+    padding-left: 0;
+    width: 330px;
+    padding-left: 1em;
+  }
+
+  .form-control::placeholder {
+    font-size: 0.95rem;
+    color: #aaa;
+    font-style: italic;
+  }
+
+.btn {
+    background-color: orange;
+    width: 100px;
+}
