--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.header::after{
+header::after{
     content: '';
     display: table;
     clear: both;
@@ -8,7 +8,7 @@
     text-align: center;
 }
 
-.header div {
+header div {
     float: left;
 }
 
@@ -128,7 +128,7 @@ img {
     border: 0;
 }
 
-.header img {
+header img {
     width: 150px;
     display: inline-flex;
 }
