--- a/main.css
+++ b/main.css
@@ -148,3 +148,11 @@ header img {
     background-color: orange;
     width: 100px;
 }
+
+.container-besar{
+    width: 50%;
+}
+
+.contact img{
+    width: 4%;
+}
