--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ footer a:hover{
 
 .footerlogo img {
     width: 100px;
-    margin-left: 10px;
+    display: inline;
 }
 img {
     vertical-align: middle;
@@ -188,7 +188,7 @@ header img {
 }
 
 .footer-kanan{
-    display: inline-block;
+    display: inline;
     width: 100%;
     float: right;
 }
