--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ footer a:hover{
 
 .footerlogo img {
     width: 100px;
-    display: inline;
+    margin-left: 10px;
 }
 img {
     vertical-align: middle;
@@ -150,9 +150,7 @@ header img {
 }
 
 .footer-kiri{
-    width: 100%;
-    display: inline-block;
-    float: left;
+    width: 50%;
 }
 
 .contact{
@@ -188,19 +186,10 @@ header img {
 }
 
 .footer-kanan{
-    display: inline;
-    width: 100%;
-    float: right;
-}
-
-.footer-kanan-1{
     display: inline-block;
+    width: 50%;
 }
 
-.footer-kanan-2{
-    display: inline-block;
-}
-
-.footer-kanan-3{
+.footer-kanan-judul{
     display: inline-block;
 }
