--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ footer a:hover{
 
 .footerlogo img {
     width: 100px;
-    margin-left: 10px;
+    display: inline;
 }
 img {
     vertical-align: middle;
@@ -150,7 +150,9 @@ header img {
 }
 
 .footer-kiri{
-    width: 50%;
+    width: 100%;
+    display: inline-block;
+    float: left;
 }
 
 .contact{
@@ -186,9 +188,7 @@ header img {
 }
 
 .footer-kanan{
-<<<<<<< HEAD
-=======
-    display: inline-block;
+    display: inline;
     width: 100%;
     float: right;
 }
@@ -198,11 +198,9 @@ header img {
 }
 
 .footer-kanan-2{
->>>>>>> parent of f3dc2f3... balu
     display: inline-block;
-    width: 50%;
 }
 
-.footer-kanan-judul{
+.footer-kanan-3{
     display: inline-block;
 }
